@@ -27,11 +27,15 @@ signal-1.2.X   Release Date: XXXX-XX-XX   Release Manager:
     window for a length argument of 1, and making all arguments after the
     length optional.
 
- ** Documented the optional gain argument for the following functions:
+ ** Minor updates to documentation for the following functions:
 
+      cpsd
+      mscohere
       sos2tf
       sos2zp
+      tfestimate
       zp2sos
+
 
  ** signal is no longer dependent on the optim package.
 
